# a2

./: .gitignore  BUILD.bazel  CHANGELOG.md  Gemfile  LICENSE.txt  README.md  WORKSPACE  a2.gemspec
.github/workflows/: gem-push.yml  run-rake.yml
exe/: a2
lib/: a2.rb
lib/a2/: approval.rb  client.rb  command.rb  paginate.rb  parser.rb  subcommand.rb  version.rb
lib/a2/client/: config_mgmt.rb  managed_nodes.rb  nodes.rb  reporting.rb  teams.rb  users.rb
lib/a2/commands/: compliance.rb  config_mgmt.rb  iam.rb  infra.rb  node.rb  node_mgmt.rb
lib/a2/mixins/: approved.rb  filtered.rb  paginated.rb
lib/a2/subcommands/: config_mgmt.rb  infra.rb  managed_node.rb  node.rb  node_mgmt.rb  reporting.rb  team.rb  user.rb
test/: a2_client_test.rb  a2_test.rb  test_helper.rb
test/fixtures/reports/: list_reports.json
test/mixins/: a2_approved_test.rb  a2_filtered_test.rb
test/subcommands/: reporting_test.rb
